# CDC-from-SQL-and-NoSQL-to-Data-Warehouse

./: README.md  app.py
cdk_infrastructure/: __init__.py
source/configure_rds_lambda/: handler.py
source/configure_redshift_for_dynamodb_cdc_lambda/: handler.py  pyproject.toml
source/load_data_to_rds_lambda/: handler.py
source/load_s3_files_from_dynamodb_stream_to_redshift_lambda/: handler.py
source/start_dms_replication_task_lambda/: handler.py
source/write_dynamodb_stream_to_s3_lambda/: handler.py
