[tool.poetry]
name = "configure-redshift-for-dynamodb-cdc-lambda"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "configure_redshift_for_dynamodb_cdc_lambda"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.26.50"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
